2005-03-21  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/extension.py: Use metaclass to manipulate 'Field' members.
	* qm/fields.py: Make fields more convenient to use in the context of
	Extensions.
	* tests/xmldb/api.xms/test.qms/fields.qmt: New unit test for this feature.
	* tests/xmldb/QMTest/test_inheritance.py: Adjust test to new
	feature.
	* qm/test/classes/python.py: Work around a python bug.

	* qm/test/classes/command.py: Generalize ExecTestBase's output
	validation.

2005-03-20  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/test/classes/xml_database.py: Fix ExplicitSuite constructor call.
	* tests/regress/QMTest/selftest.py: Allow an 'ids' file to specify test
	and suite ids to be specified to be used in the 'qmtest run' command.
	* tests/regress/xml2: New regression test for XMLDatabase's ability to
	use explicit suites.
	* qm/test/share/tutorial/tdb/suite.qms: New demo suite.

2005-02-14  Stefan Seefeld  <stefan@codesourcery.com>

	* README: Update documentation to reflect current build procedure.
	* GNUmakefile.in: Removed.

2005-02-14  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/web.py: Replace deprecated use of whrandom by random.
	* qm/external/DocumentTemplate/DT_Util.py: Likewise.

2005-01-05  Stefan Seefeld  <stefan@codesourcery.com>

	* qmdist/command/build_scripts.py: Create new command to extend
	the default build_scripts command.
	* setup.py: Use the extended build_scripts command.
	* GNUmakefile.in: Remove obsolete command.

2004-12-16  Stefan Seefeld <seefeld@sympatico.ca>

	* qm/test/web/web.py: Replace operator 'is' by '=='
	in string comparison

2004-10-28  Matthias Klose <doko@cs.tu-berlin.de>

	* qmdist/command/build_doc.py (build_doc.run): Use "openjade" if
	"jade" is not available.

2004-08-20  Nathaniel Smith  <njs@codesourcery.com>

	* qm/__init__.py: Don't import or define 'lib_dir'.
	* qmdist/command/install_data.py (install_data.run): Don't define
	'lib_dir'.