@@ -1,3 +1,14 @@
+2005-03-29  Stefan Seefeld  <stefan@codesourcery.com>
+
+	* qm/test/parameter_database.py: New file.
+
+2005-03-24  Stefan Seefeld  <stefan@codesourcery.com>
+
+	* qm/extension.py: Enhance the detection of argument name collision.
+	* Makefile: Removed.
+	* configure.in: Removed.
+	* configure: Removed.
+
 2005-03-21  Stefan Seefeld  <stefan@codesourcery.com>
 
 	* qm/extension.py: Use metaclass to manipulate 'Field' members.
